--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
         <div class="bar3 bar"></div>
     </div>
 
-    <nav id="navDesk">
+    <nav id="navDesk" class="navDesk">
         <a href="#home">
             <div id="logoNav"></div>
         </a>
@@ -38,36 +38,35 @@
     <div class="container">
         <section id="home" class="scroll-section">
             <h1>IJsberen</h1>
-            <img src="">
         </section>
 
         <section id="about" class="scroll-section">
             <h1>Over ons</h1>
             <div id="value1" class="brand-value">
                 <div class="brand-image-wrapper">
-                    <div class="img-inner"></div>
-                    <img src="">
+                    <img src="img/brandvalue_diversiteit.svg">
                 </div>
                 <h2>Diversiteit</h2>
-                <p>Eerst en vooral betekent dit op verschillende locaties. Zo kan je bij ons wandelen in zowel de natuur als in het stad! Daarbovenop zijn er ook verscheidene types van wandelingen. De ene keer is het een korte wandeling en de volgende keer een dagwandeling met picknick of een kroegentocht. Zo heeft iedereen het hier naar zijn zin!</p>
+                <p>Eerst en vooral betekent dit op verschillende locaties. Zo kan je bij ons wandelen in zowel de natuur als in het stad! Daarbovenop zijn er ook verscheidene types van wandelingen. </p>
+                <p> De ene keer is het een korte wandeling en de volgende keer een dagwandeling met picknick of een kroegentocht. Zo heeft iedereen het hier naar zijn zin!</p>
 
             </div>
             <div id="value2" class="brand-value">
                 <div class="brand-image-wrapper">
-                    <div class="img-inner"></div>
-                    <img src="">
+                    <img src="img/brandvalue_casual.svg">
                 </div>
-                <h2>Recreatief</h2>
-                <p>De sfeer staat bij onze wandelingen altijd centraal. Geen competitie en geen wedstrijden. Alles draait bij ons om de gezelligheid en de mensen zelf. Daarom proberen we elke keer om het zo aangenaam mogelijk te maken voor elke deelnemer. Als je dus gewoon is een babbeltje wil doen terwijl je je gezondheid in check houdt, dan ben je op de juiste plek!</p>
+                <h2>Casual</h2>
+                <p>De sfeer staat bij onze wandelingen altijd centraal. Geen competitie en geen wedstrijden. Alles draait bij ons om de gezelligheid en de mensen zelf. </p>
+                <p> Daarom proberen we elke keer om het zo aangenaam mogelijk te maken voor elke deelnemer. Als je dus gewoon is een babbeltje wil doen terwijl je je gezondheid in check houdt, dan ben je op de juiste plek!</p>
 
             </div>
             <div id="value3" class="brand-value">
                 <div class="brand-image-wrapper">
-                    <div class="img-inner"></div>
-                    <img src="">
+                    <img src="img/brandvalue_eigenTempo.svg">
                 </div>
                 <h2>Eigen Tempo</h2>
-                <p>Het is niet verplicht om allemaal samen te blijven tijdens de wandeling. Als het tempo te snel of te traag is, dan mag je zelf vertragen of versnellen. Het belangrijkste is dat je je op je gemak voelt. We starten samen en aan het einde kan je nog gezellig napraten, dus wandel gerust aan je eigen tempo</p>
+                <p>Het is niet verplicht om allemaal samen te blijven tijdens de wandeling. Als het tempo te snel of te traag is, dan mag je zelf vertragen of versnellen. </p>
+                <p> Het belangrijkste is dat je je op je gemak voelt. We starten samen en aan het einde kan je nog gezellig napraten, dus wandel gerust aan je eigen tempo</p>
             </div>
         </section>
 
